# hw6

./: .gitignore  DESCRIPTION  app.R  app.py  hw-06-leg-label.qmd  pyproject.toml  requirements.txt
data/: leg_lite.feather  leg_predictions.feather  performance_metrics.csv  token_usage.csv
knowledge/: coding-guidance.md  course-overview.md  hw-06-instructions.md
prompts/: cap-detailed.md  cap-reasoning.md  cap-simple.md
scripts/: analyze-results.py  leg-label.py  results.py
